Added StopResource, fixed RouteDto
