# TimetableService/resources/openapi/documentation.yaml
@@ -4,12 +4,97 @@ info:
   description: "travel_buddy API"
   version: "1.0.0"
 servers:
-- url: "http://0.0.0.0:8080"
+- url: "https://0.0.0.0:8080"
 paths:
   /gtfs/import:
     post:
       description: "Upload GTFS feed as ZIP file\n\n        Example curl command:\
         \ `curl -X POST http://localhost:8080/gtfs/import --data-binary @/home/nikola/Downloads/b2b.gtfs.zip`"
+  /stop/{id}:
+    delete:
+      description: ""
+      parameters:
+      - name: "parent"
+        in: "query"
+        required: false
+        schema:
+          type: "object"
+      - name: "id"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
+    get:
+      description: ""
+      parameters:
+      - name: "parent"
+        in: "query"
+        required: false
+        schema:
+          type: "object"
+      - name: "id"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                type: "array"
+                items:
+                  $ref: "#/components/schemas/Stop"
+    put:
+      description: ""
+      parameters:
+      - name: "parent"
+        in: "query"
+        required: false
+        schema:
+          type: "object"
+      - name: "id"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/StopDto"
+        required: true
+  /stop/{id}/departures:
+    get:
+      description: ""
+      parameters:
+      - name: "parent"
+        in: "query"
+        required: false
+        schema:
+          type: "object"
+      - name: "id"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
+      - name: "from"
+        in: "query"
+        required: false
+        schema:
+          type: "integer"
+      - name: "until"
+        in: "query"
+        required: false
+        schema:
+          type: "integer"
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema: {}
   /stops:
     get:
       description: ""
@@ -28,81 +113,6 @@ paths:
                 type: "array"
                 items:
                   $ref: "#/components/schemas/Stop"
-  /stops/{id}:
-    delete:
-      description: ""
-      parameters:
-      - name: "name"
-        in: "query"
-        required: false
-        schema:
-          type: "string"
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
-    get:
-      description: ""
-      parameters:
-      - name: "name"
-        in: "query"
-        required: false
-        schema:
-          type: "string"
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
-      responses:
-        "200":
-          description: "OK"
-          content:
-            '*/*':
-              schema:
-                type: "array"
-                items:
-                  $ref: "#/components/schemas/Stop"
-    put:
-      description: ""
-      parameters:
-      - name: "name"
-        in: "query"
-        required: false
-        schema:
-          type: "string"
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/StopDto"
-        required: true
-  /stops/{id}/departures:
-    get:
-      description: ""
-      parameters:
-      - name: "name"
-        in: "query"
-        required: false
-        schema:
-          type: "string"
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
-      responses:
-        "200":
-          description: "OK"
-          content:
-            '*/*':
-              schema: {}
   /:
     get:
       description: ""
